add config to launch.json

--- a/NicoleV_LiZ/.vscode/launch.json
+++ b/NicoleV_LiZ/.vscode/launch.json
@@ -5,6 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Cities CLI: Valid Add",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": [
+                "add", "Spongetown", "CA", "ON", "10"
+            ]
+        },
+        {
             "name": "Python Debugger: Current File",
             "type": "debugpy",
             "request": "launch",
